# CHK-sncl01

./: pyproject.toml
lib/solutions/CHK/: checkout_solution.py  test_checkout_solution.py
lib/solutions/HLO/: hello_solution.py
