[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "Boilerplate"
authors = []

[tool.poetry.dependencies]
python = "3.10.14"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["src", "test"]
multi_line_output = 3
include_trailing_comma = true
